# pde4430_coursework2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  lidar_sensor.rviz  options.rviz
launch/: cw2_assessment_world.launch  display.launch  objects.launch
pde4430_coursework2/: CMakeLists.txt  package.xml
pde4430_coursework2/config/: diff_drive_controller.yaml  lidar_sensor_options.rviz  options.rviz
pde4430_coursework2/launch/: cw2_assessment_world.launch  hector_slam.launch  robot.launch  rviz_display.launch
pde4430_coursework2/urdf/: gazebo.xacro  lidar.xacro  twr.urdf
pde4430_coursework2_navigation/: CMakeLists.txt  package.xml
pde4430_coursework2_navigation/config/: costmap_common_params.yaml  navigation.rviz
pde4430_coursework2_navigation/launch/: nav_stack.launch
pde4430_coursework2_navigation/scripts/: navigate_to_goal.py
pde4430_coursework2_slam/: CMakeLists.txt  frames.gv  package.xml
pde4430_coursework2_slam/launch/: hector_slam.launch
pde4430_coursework2_teleop/: CMakeLists.txt  package.xml
pde4430_coursework2_teleop/launch/: teleop.launch
urdf/: gazebo.xacro  macros.xacro  properties.xacro  three_wheeled_robot.xacro  twr.urdf
worlds/: assessment.world
